# PyDopplerSim

./: .gitignore  README.md  config.py  estimation.py  geometry.py  iq_gen.py  kinematics.py  main.py  paths.py  plotting.py  pyproject.toml  sim.py
.github/workflows/: test.yml
.sisyphus/: agent-context.md  boulder.json
.sisyphus/notepads/sim-modularization/: learnings.md
.sisyphus/plans/: sim-modularization.md  test-framework.md
dsp/: __init__.py  estimators.py  kinematics.py
dsp/gnuradio/: __init__.py  kinematics_block.py  phase_diff_block.py
plots/.sisyphus/plans/: 3d-expansion.md
plotting/: __init__.py  animation.py  static.py
tests/: __init__.py  conftest.py  test_estimation.py  test_estimation_properties.py  test_geometry.py  test_geometry_properties.py  test_iq_gen.py  test_kinematics.py  test_kinematics_properties.py  test_path_and_derivation.py  test_paths.py
